Relatório de entrega Tech Challenge

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -38,8 +38,9 @@
    "source": [
     "A partir dos dados disponibilizados pelo portal http://vitibrasil.cnpuv.embrapa.br/index.php?opcao=opt_01, realizamos uma análise detalhada das informações dos últimos 15 anos. Após o processo de tratamento e organização dos dados, geramos a seguinte tabela de exportação, que apresenta de forma clara e estruturada os resultados obtidos. Resultando na seguinte tabela:\n",
     "\n",
+    "![Imagem](https://raw.githubusercontent.com/Igorbr321/FIAP-tech-challenge-1/refs/heads/main/Images/tabela_head_dados.png)\n",
     "\n",
-    "\n",
+    "> A tabela mostra as exportações de vinhos do Brasil para vários países, com destaque para grandes volumes enviados a destinos como Estados Unidos, China, Países Baixos e Japão. O preço por litro varia entre US$ 1,34 e US$ 8,09, com o Paraguai sendo o maior destino em termos de volume e valor total, superando US$ 44 milhões. Outros mercados, como Canadá, Suíça e Alemanha, também se destacam em termos de valor total das exportações.\n",
     "\n",
     "\n",
     "\n",
@@ -52,7 +53,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Colocar um tópico para exportações e um tópico para importação dos vinhos, verificar qual é o mais lucrativo para o Brasil.\n",
+    "# Verificar quais vinhos dão mais lucros e qual o que dá menos lucro e ver em qual focar.\n"
+   ]
   },
   {
    "cell_type": "markdown",
