Relatório de entrega - Tech Challenge

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analisando o Mercado de Vinho Brasileiro (Importação e Exportação)"
+    "# Análise do Mercado de Vinhos: Exportação e Importação no Brasil"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dados "
+    "## Exportação de Vinhos\n"
    ]
   },
   {
@@ -40,7 +40,6 @@
     "\n",
     "![Imagem](https://raw.githubusercontent.com/Igorbr321/FIAP-tech-challenge-1/refs/heads/main/Images/tabela_head_dados.png)\n",
     "\n",
-    "> A tabela mostra as exportações de vinhos do Brasil para vários países, com destaque para grandes volumes enviados a destinos como Estados Unidos, China, Países Baixos e Japão. O preço por litro varia entre US$ 1,34 e US$ 8,09, com o Paraguai sendo o maior destino em termos de volume e valor total, superando US$ 44 milhões. Outros mercados, como Canadá, Suíça e Alemanha, também se destacam em termos de valor total das exportações.\n",
     "\n",
     "\n",
     "\n",
@@ -49,12 +48,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importação de Vinhos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analisando os dados de importação dos últimos 15 anos, realizamos o tratamento e a organização das informações. Como resultado, geramos uma tabela consolidada e estruturada. Resultando na seguinte tabela:\n",
+    "\n",
+    "![Imagem](https://raw.githubusercontent.com/Igorbr321/FIAP-tech-challenge-1/refs/heads/main/Images/tabela_head_dados_imp.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Colocar um tópico para exportações e um tópico para importação dos vinhos, verificar qual é o mais lucrativo para o Brasil.\n",
+    "# e um tópico para importação dos vinhos, verificar qual é o mais lucrativo para o Brasil.\n",
     "# Verificar quais vinhos dão mais lucros e qual o que dá menos lucro e ver em qual focar.\n"
    ]
   },
