--- a/exportation_data.ipynb
+++ b/exportation_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_vinho_org = process_export_data(exp_vinho, 2008, 2023)\n",
-    "exp_espumantes_org = process_export_data(exp_espumantes, 2008, 2023)\n",
-    "exp_suco_org = process_export_data(exp_suco, 2008, 2023)\n",
-    "exp_uva_org = process_export_data(exp_uva, 2008, 2023)"
+    "exp_vinho_org = process_export_data(exp_vinho, 2013, 2023)\n",
+    "exp_espumantes_org = process_export_data(exp_espumantes, 2013, 2023)\n",
+    "exp_suco_org = process_export_data(exp_suco, 2013, 2023)\n",
+    "exp_uva_org = process_export_data(exp_uva, 2013, 2023)"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paises = pd.concat([exp_espumantes_org_p['País'], exp_suco_org_p['País'], exp_vinho_org_p['País'], exp_uva_org_p['País']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paises.drop_duplicates(inplace=True)\n",
+    "# paises.to_csv('paises_exp.csv', sep=',', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +140,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_vinho_org = update_country_names(exp_vinho_org, paises_org)\n",
+    "exp_espumantes_org = update_country_names(exp_espumantes_org, paises_org)\n",
+    "exp_suco_org = update_country_names(exp_suco_org, paises_org)\n",
+    "exp_uva_org = update_country_names(exp_uva_org, paises_org)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enriquecendo o Dataframe com dados econômicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pib = pd.read_csv(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\pib_2013_2023.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pib['País'] = df_pib['País'].map(country_translation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_vinho_org = exp_vinho_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
+    "exp_espumantes_org = exp_espumantes_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
+    "exp_suco_org = exp_suco_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
+    "exp_uva_org = exp_uva_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enriquecendo o Dataframe com dados climáticos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +230,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Exportation Data\\\\exportacao_uva_agrupado_pais.csv'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +265,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Exportation Data\\\\exportacao_uva_ano.csv'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
