--- a/importation_data.ipynb
+++ b/importation_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[5 rows x 110 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,15 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imp_vinho_org = process_export_data(imp_vinho, 2008, 2023)\n",
-    "imp_sucos_org = process_export_data(imp_sucos, 2008, 2023)\n",
-    "imp_frescas_org = process_export_data(imp_frescas, 2008, 2023)\n",
-    "imp_espumantes_org = process_export_data(imp_espumantes, 2008, 2023)\n",
-    "imp_passas_org = process_export_data(imp_passas, 2008, 2023)"
+    "imp_vinho_org = process_export_data(imp_vinho, 2014, 2023)\n",
+    "imp_sucos_org = process_export_data(imp_sucos, 2014, 2023)\n",
+    "imp_frescas_org = process_export_data(imp_frescas, 2014, 2023)\n",
+    "imp_espumantes_org = process_export_data(imp_espumantes, 2014, 2023)\n",
+    "imp_passas_org = process_export_data(imp_passas, 2014, 2023)"
    ]
   },
   {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paises = pd.concat([imp_vinho_org_p['País'], imp_sucos_org_p['País'], imp_frescas_org_p['País'], imp_espumantes_org_p['País'],imp_passas_org_p['País']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paises.drop_duplicates(inplace=True)\n",
+    "# paises.to_csv('paises_imp.csv', sep=',', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,6 +356,177 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_vinho_org = update_country_names(imp_vinho_org, paises_org)\n",
+    "imp_sucos_org = update_country_names(imp_sucos_org, paises_org)\n",
+    "imp_frescas_org = update_country_names(imp_frescas_org, paises_org)\n",
+    "imp_espumantes_org = update_country_names(imp_espumantes_org, paises_org)\n",
+    "imp_passas_org = update_country_names(imp_passas_org, paises_org)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enriquecendo o Dataframe com dados econômicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pib = pd.read_csv(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\pib_2013_2023.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pib['País'] = df_pib['País'].map(country_translation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_vinho_org = imp_vinho_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_sucos_org = imp_sucos_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
+    "imp_frescas_org = imp_frescas_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
+    "imp_espumantes_org = imp_espumantes_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
+    "imp_passas_org = imp_passas_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enriquecendo o Dataframe com dados climáticos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clima = pd.read_excel(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\Temperatura Média Países World Banking.xlsx', engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clima.drop(columns=['Unnamed: 0', 'Tipo'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>País</th>\n",
+       "      <th>Temperatura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Burkina Faso</td>\n",
+       "      <td>30,40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mali</td>\n",
+       "      <td>29,21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>29,17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Senegal</td>\n",
+       "      <td>28,90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mauritânia</td>\n",
+       "      <td>28,82</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            País Temperatura\n",
+       "0   Burkina Faso       30,40\n",
+       "1           Mali       29,21\n",
+       "2          Aruba       29,17\n",
+       "3        Senegal       28,90\n",
+       "4     Mauritânia       28,82"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clima.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imp_espumantes_org_p = imp_espumantes_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -345,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +555,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Importation Data\\\\importacao_passas_agrupado_pais.csv'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +592,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Importation Data\\\\importacao_passas_ano.csv'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
