--- a/exportation_data.ipynb
+++ b/exportation_data.ipynb
@@ -160,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pib = pd.read_csv(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\pib_2013_2023.csv', sep=',')"
+    "df_pib = pd.read_csv(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\Dataset and Instructions\\pib_2013_2023.csv', sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,10 +197,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_clima = pd.read_excel(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\Dataset and Instructions\\Temperatura Média Países World Banking.xlsx', engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clima.drop(columns=['Unnamed: 0', 'Tipo'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clima['Temperatura'] = df_clima['Temperatura'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_vinho_org_p = exp_vinho_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "exp_espumantes_org_p = exp_espumantes_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "exp_suco_org_p = exp_suco_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "exp_uva_org_p = exp_uva_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +262,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Exportation Data\\\\exportacao_uva_agrupado_pais.csv'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +297,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Exportation Data\\\\exportacao_uva_ano.csv'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
