--- a/importation_data.ipynb
+++ b/importation_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[5 rows x 110 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,16 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pib = pd.read_csv(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\pib_2013_2023.csv', sep=',')"
+    "df_pib = pd.read_csv(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\Dataset and Instructions\\pib_2013_2023.csv', sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,19 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imp_vinho_org = imp_vinho_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "imp_vinho_org = imp_vinho_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
     "imp_sucos_org = imp_sucos_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
     "imp_frescas_org = imp_frescas_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
     "imp_espumantes_org = imp_espumantes_org.merge(df_pib[['País', 'Ano', 'PIB']], how='left', on=['País', 'Ano'])\n",
@@ -423,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clima = pd.read_excel(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\Temperatura Média Países World Banking.xlsx', engine='openpyxl')"
+    "df_clima = pd.read_excel(r'C:\\Users\\Usuario\\Downloads\\FIAP-tech-challenge-1\\Dataset and Instructions\\Temperatura Média Países World Banking.xlsx', engine='openpyxl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,89 +433,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>País</th>\n",
-       "      <th>Temperatura</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Burkina Faso</td>\n",
-       "      <td>30,40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Mali</td>\n",
-       "      <td>29,21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Aruba</td>\n",
-       "      <td>29,17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Senegal</td>\n",
-       "      <td>28,90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Mauritânia</td>\n",
-       "      <td>28,82</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            País Temperatura\n",
-       "0   Burkina Faso       30,40\n",
-       "1           Mali       29,21\n",
-       "2          Aruba       29,17\n",
-       "3        Senegal       28,90\n",
-       "4     Mauritânia       28,82"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_clima.head()"
+    "df_clima['Temperatura'] = df_clima['Temperatura'].astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imp_espumantes_org_p = imp_espumantes_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')"
+    "imp_vinho_org_p = imp_vinho_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "imp_sucos_org_p = imp_sucos_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "imp_frescas_org_p = imp_frescas_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "imp_espumantes_org_p = imp_espumantes_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')\n",
+    "imp_passas_org_p = imp_passas_org_p.merge(df_clima[['País', 'Temperatura']], how='left', on='País')"
    ]
   },
   {
@@ -535,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +482,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Importation Data\\\\importacao_passas_agrupado_pais.csv'"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +519,7 @@
        "'C:\\\\Users\\\\Usuario\\\\Downloads\\\\FIAP-tech-challenge-1\\\\Export of processed data\\\\Importation Data\\\\importacao_passas_ano.csv'"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
